--- a/style.css
+++ b/style.css
@@ -5,26 +5,62 @@
 }
 
 h1 {
-  font-family: Arial, Helvetica, sans-serif;
-  font-size: 42px;
-  font-weight: 700;
-  line-height: 46px;
-  color: #0b3e25;
-}
-
-h2 {
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: 'Rajdhani', Arial, Helvetica, sans-serif;
   font-size: 36px;
   font-weight: 700;
   line-height: 40px;
   color: #0b3e25;
 }
 
-.body-text {
-  font-family: Arial, Helvetica, sans-serif;
+@media screen and (min-width: 1024px) {
+  h1 {
+    font-size: 42px;
+    line-height: 46px;
+  }
+}
+
+h2 {
+  font-family: 'Rajdhani', Arial, Helvetica, sans-serif;
+  font-size: 30px;
+  font-weight: 700;
+  line-height: 34px;
+  color: #0b3e25;
+}
+
+@media screen and (min-width: 1024px) {
+  h2 {
+    font-size: 50px;
+    line-height: 60px;
+  }
+}
+
+h3 {
+  font-family: 'Rajdhani', Arial, Helvetica, sans-serif;
   font-size: 24px;
-  line-height: 32px;
+  font-weight: 700;
+  line-height: 28px;
+  color: #0b3e25;
+}
+
+@media screen and (min-width: 1024px) {
+  h3 {
+    font-size: 30px;
+    line-height: 34px;
+  }
+}
+
+.body-text {
+  font-family: 'Roboto', Arial, Helvetica, sans-serif;
+  font-size: 18px;
+  line-height: 22px;
   color: #57534e;
+}
+
+@media screen and (min-width: 1024px) {
+  .body-text {
+    font-size: 18px;
+    line-height: 26px;
+  }
 }
 
 .hidden {
@@ -196,5 +232,99 @@ main .our-shops-section .our-shops-list .our-shop-content p {
         -ms-flex-direction: row-reverse;
             flex-direction: row-reverse;
   }
+}
+
+main .contact-us-section {
+  background-color: #f2f2f2;
+  padding: 60px 24px;
+}
+
+@media screen and (min-width: 1024px) {
+  main .contact-us-section {
+    padding: 60px 0;
+  }
+}
+
+main .contact-us-section .contact-us-heading {
+  margin-bottom: 20px;
+  text-align: center;
+}
+
+main .contact-us-section .contact-us-description {
+  margin-bottom: 40px;
+  text-align: center;
+}
+
+main .contact-us-section .contact-us-list {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: (1fr)[1];
+      grid-template-columns: repeat(1, 1fr);
+  grid-gap: 30px;
+  max-width: 1280px;
+  margin: 0 auto;
+}
+
+@media screen and (min-width: 1024px) {
+  main .contact-us-section .contact-us-list {
+    -ms-grid-columns: (1fr)[3];
+        grid-template-columns: repeat(3, 1fr);
+    grid-gap: 50px;
+  }
+}
+
+main .contact-us-section .contact-us-list .contact {
+  background-color: white;
+  padding: 30px;
+  border-radius: 20px;
+  -webkit-transition: all 0.3s ease;
+  transition: all 0.3s ease;
+}
+
+main .contact-us-section .contact-us-list .contact:hover {
+  scale: 1.1;
+}
+
+main .contact-us-section .contact-us-list .contact-main {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  gap: 30px;
+  margin-bottom: 20px;
+}
+
+main .contact-us-section .contact-us-list .contact-main .contact-image {
+  width: 82px;
+  height: 82px;
+  padding: 20px;
+  border-radius: 50%;
+  background-color: #5c74f0;
+}
+
+main .contact-us-section .contact-us-list .contact-main .contact-image img {
+  width: 100%;
+  height: 100%;
+}
+
+main .contact-us-section .contact-us-list .contact-main .contact-title {
+  width: -webkit-max-content;
+  width: -moz-max-content;
+  width: max-content;
+}
+
+main .contact-us-section .contact-us-list .contact-description p:first-child {
+  color: #5c74f0;
+  margin-bottom: 10px;
+}
+
+main .contact-us-section .contact-us-list .contact-description a {
+  text-decoration: none;
+}
+
+main .contact-us-section .contact-us-list .contact-description a:hover {
+  color: #5c74f0;
 }
 /*# sourceMappingURL=style.css.map */
