--- a/style.scss
+++ b/style.scss
@@ -2,27 +2,55 @@
 *, :after, :before {
     box-sizing: border-box;
     margin: 0;
+    // font-family: 'Rajdhani', sans-serif;
+    // font-family: 'Roboto', sans-serif;
 }
 h1{
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 42px;
-    font-weight: 700;
-    line-height: 46px;
-    color: rgb(11, 62, 37);
-}
-h2{
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Rajdhani', Arial, Helvetica, sans-serif;
     font-size: 36px;
     font-weight: 700;
     line-height: 40px;
     color: rgb(11, 62, 37);
+    @media screen and (min-width: 1024px) {
+        font-size: 42px;
+        line-height: 46px;
+    }
 }
-.body-text{
-    font-family: Arial, Helvetica, sans-serif;
+h2{
+    font-family: 'Rajdhani', Arial, Helvetica, sans-serif;
+    font-size: 30px;
+    font-weight: 700;
+    line-height: 34px;
+    color: rgb(11, 62, 37);
+    @media screen and (min-width: 1024px) {
+        font-size: 50px;
+        line-height: 60px;
+    }
+}
+
+h3 {
+    font-family: 'Rajdhani', Arial, Helvetica, sans-serif;
     font-size: 24px;
-    line-height: 32px;
-    color: rgb(87, 83, 78);
+    font-weight: 700;
+    line-height: 28px;
+    color: #0b3e25;
+    @media screen and (min-width: 1024px) {
+        font-size: 30px;
+        line-height: 34px;
+    }
 }
+
+.body-text {
+  font-family: 'Roboto', Arial, Helvetica, sans-serif;
+  font-size: 18px;
+  line-height: 22px;
+  color: #57534e;
+  @media screen and (min-width: 1024px) {
+    font-size: 18px;
+    line-height: 26px;
+  }
+}
+
 .hidden{
     display: none;
 }
@@ -77,6 +105,7 @@ main{
     @media screen and (min-width:1024px) {
         margin-top: 100px;
     }
+
     .our-shops-section{
         background-color: rgba(245, 245, 244, 0.5);
         padding: 60px 0;
@@ -130,6 +159,77 @@ main{
                     }
                 }
             }
+        }
+    }
+
+    .contact-us-section{
+        background-color: #f2f2f2;
+        padding: 60px 24px;
+        @media screen and (min-width:1024px) {
+            padding: 60px 0;
+        }
+        .contact-us-heading{
+            margin-bottom: 20px;
+            text-align: center;
+        }
+        .contact-us-description{
+            margin-bottom: 40px;
+            text-align: center;
+        }
+        .contact-us-list{
+            display: grid;
+            grid-template-columns: repeat(1, 1fr);
+            grid-gap: 30px;
+            max-width: 1280px;
+            margin: 0 auto;
+            @media screen and (min-width:1024px) {
+                grid-template-columns: repeat(3, 1fr);
+                grid-gap: 50px;
+            }
+            .contact{
+                background-color: white;
+                padding: 30px;
+                border-radius: 20px;
+                transition: all 0.3s ease;
+                &:hover{
+                    scale: 1.1;
+                }
+                &-main{
+                    display: flex;
+                    align-items: center;
+                    gap: 30px;
+                    margin-bottom: 20px;
+                    .contact-image{
+                        width: 82px;
+                        height: 82px;
+                        padding: 20px;
+                        border-radius: 50%;
+                        background-color: #5c74f0;
+                        img{
+                            width: 100%;
+                            height: 100%;
+                        }
+                    }
+                    .contact-title{
+                        width: max-content;
+                    }
+                }
+                &-description{
+                    p:first-child{
+                        color: #5c74f0;
+                        margin-bottom: 10px;
+                    }
+                    a{
+                        text-decoration: none;
+                        &:hover{
+                            color: #5c74f0;
+                        }
+                    }
+                }
+            }
+            // .contact{
+            //     width: 33.33%;
+            // }
         }
     }
 }
